// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SayMsgForm > render > should render 1`] = `
<Dialog
  buttons={
    {
      "primary": {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="send_msg"
  title="Send message"
>
  <TypeList
    __className=""
    initialType={
      {
        "component": [Function],
        "description": "Send the contact a message",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": [
          "text",
          "quick_replies",
          "templating.variables",
        ],
        "massageForDisplay": [Function],
        "name": "Send message",
        "type": "send_msg",
      }
    }
    nodeSettings={
      {
        "originalAction": {
          "all_urns": false,
          "text": "Hey!",
          "type": "send_msg",
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
        },
        "originalNode": {
          "inboundConnections": {},
          "node": {
            "actions": [
              {
                "all_urns": false,
                "text": "Hey!",
                "type": "send_msg",
                "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
              },
            ],
            "exits": [
              {
                "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
              },
            ],
            "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
          },
          "ui": {
            "position": {
              "left": 0,
              "top": 0,
            },
            "type": "execute_actions",
          },
        },
      }
    }
    onChange={[MockFunction spy]}
  />
  <TextInputElement
    autocomplete={true}
    entry={
      {
        "value": "",
      }
    }
    focus={true}
    name="Message"
    onChange={[Function]}
    showLabel={false}
    textarea={true}
  />
  <UploadButton
    endpoint="/assets/attachments.json"
    icon="microphone"
    onUploadChanged={[Function]}
    removeText="Remove Recording"
    uploadText="Upload Recording"
    url=""
  />
</Dialog>
`;

exports[`SayMsgForm > updates > should allow switching from router 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "audio_url": "",
        "text": "What is your favorite color?",
        "type": "say_msg",
        "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`SayMsgForm > updates > should save changes 1`] = `
{
  "audio": {
    "value": "",
  },
  "message": {
    "validationFailures": [],
    "value": "What is your favorite color?",
  },
  "valid": true,
}
`;

exports[`SayMsgForm > updates > should save changes 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "audio_url": "",
        "text": "What is your favorite color?",
        "type": "say_msg",
        "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
